external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/SuperTRUMP_Quote__c.object-meta.xml
<CustomObject>
    <label>SuperTRUMP Quote</label>
    <nameField>
        <displayFormat>PQ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuperTRUMP Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>