external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Balloon__c.field-meta.xml
<CustomField>
    <fullName>Balloon__c</fullName>
    <label>Balloon</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>