external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Commencement__c.field-meta.xml
<CustomField>
    <fullName>Commencement__c</fullName>
    <label>Commencement</label>
    <type>Date</type>
</CustomField>