external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/IRR_NPT__c.field-meta.xml
<CustomField>
    <fullName>IRR_NPT__c</fullName>
    <label>IRR NPT</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>