external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Is_Synchronized__c.field-meta.xml
<CustomField>
    <fullName>Is_Synchronized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synchronized</label>
    <type>Checkbox</type>
</CustomField>