external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Lending_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lending_Rate__c</fullName>
    <label>Lending Rate</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>