external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Lessor_FAS__c.field-meta.xml
<CustomField>
    <fullName>Lessor_FAS__c</fullName>
    <label>Lessor FAS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>