external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/MISF_NAT__c.field-meta.xml
<CustomField>
    <fullName>MISF_NAT__c</fullName>
    <label>MISF NAT</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>