external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Payment_Timing__c.field-meta.xml
<CustomField>
    <fullName>Payment_Timing__c</fullName>
    <label>Payment Timing</label>
    <length>60</length>
    <type>Text</type>
</CustomField>