external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Periodicity__c.field-meta.xml
<CustomField>
    <fullName>Periodicity__c</fullName>
    <label>Periodicity</label>
    <length>60</length>
    <type>Text</type>
</CustomField>