external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Quoted</fullName>
                <default>true</default>
                <label>Not Quoted</label>
            </value>
            <value>
                <fullName>Waited for Credit Check</fullName>
            </value>
            <value>
                <fullName>Ready to Quote</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Waiting for Documentation</fullName>
            </value>
            <value>
                <fullName>Ready to Book</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Rejected by Client</fullName>
            </value>
            <value>
                <fullName>Rejected by Lessor</fullName>
            </value>
            <value>
                <fullName>Rejected by Lender</fullName>
            </value>
            <value>
                <fullName>Rejected by Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>