external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Rent_IBR__c.field-meta.xml
<CustomField>
    <fullName>Rent_IBR__c</fullName>
    <label>Rent IBR</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>