external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Residual__c.field-meta.xml
<CustomField>
    <fullName>Residual__c</fullName>
    <label>Residual</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>