external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Takedown__c.field-meta.xml
<CustomField>
    <fullName>Takedown__c</fullName>
    <label>Takedown</label>
    <type>Date</type>
</CustomField>