external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>IST__SuperTRUMP_Template__c</referenceTo>
    <relationshipName>Pricing_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>