external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/fields/Total_Lending__c.field-meta.xml
<CustomField>
    <fullName>Total_Lending__c</fullName>
    <label>Total Lending</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>