external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/recordTypes/Both.recordType-meta.xml
<RecordType>
    <fullName>Both</fullName>
    <active>true</active>
    <description>SuperTRUMP Lease and Loan</description>
    <label>Both</label>
</RecordType>