external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/recordTypes/Lease.recordType-meta.xml
<RecordType>
    <fullName>Lease</fullName>
    <active>true</active>
    <description>SuperTRUMP Lease</description>
    <label>Lease</label>
</RecordType>