external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>SuperTRUMP Loan</description>
    <label>Loan</label>
</RecordType>