external-quote/force-app/main/default/objects/SuperTRUMP_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Quote_Status__c</columns>
    <columns>Cost__c</columns>
    <columns>Payment__c</columns>
    <columns>Term__c</columns>
    <columns>Template__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>